--- a/src/components/order_segment/index.css
+++ b/src/components/order_segment/index.css
@@ -1,35 +1,18 @@
 ion-segment-button::part(indicator-background) {
-    background: rgb(228 243 240);
-  }
-  
-  /* Material Design styles */
-  ion-segment-button.md::part(native) {
-    color: grey;
-    height: 3rem;
-  }
-  
-  .segment-button-checked.md::part(native) {
-    color: #006A55;
-  }
-  
-  ion-segment-button.md::part(indicator-background) {
-    border-radius: 4px;
-  }
-  
-  /* iOS styles */
-  ion-segment-button.ios::part(native) {
-    color: grey;
-    height: 3rem;
-  }
-  
-  .segment-button-checked.ios::part(native) {
-    color: #006A55;
-  }
-  
-  ion-segment-button.ios::part(indicator-background) {
-    border-radius: 4px;
-  }
-.segment-colors:active {
-    background: rgb(228 243 240);
-    color: #006A55;
+  background: rgb(228 243 240);
 }
+
+
+ion-segment-button::part(native) {
+  color: grey;
+}
+
+.segment-button-checked::part(native) {
+  color: #006A55;
+}
+
+ion-segment-button::part(indicator-background) {
+  height: 48px;
+  border-radius: 7px;
+}
+
